--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "hook",
+  "name": "todolistreact",
   "version": "0.1.0",
+  "homepage":"./" ,
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -9,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
